--- a/Builds/Alpha/index.html
+++ b/Builds/Alpha/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Alpha.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Alpha.data.br",
-        frameworkUrl: buildUrl + "/Alpha.framework.js.br",
-        codeUrl: buildUrl + "/Alpha.wasm.br",
+        dataUrl: buildUrl + "/Alpha.data",
+        frameworkUrl: buildUrl + "/Alpha.framework.js",
+        codeUrl: buildUrl + "/Alpha.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "2D game test",
